hphp/test/zend/good/ext/intl/tests/spoofchecker_001.php.skipif
<?hh
<<__EntryPoint>> function main() {
if(!extension_loaded('intl') || !class_exists("Spoofchecker")) print 'skip';
}
